# web_dashboard_test

./: CMakeLists.txt  partitions.csv
components/https_dashboard/: CMakeLists.txt  https_dashboard.c
components/https_dashboard/certificates/: servercert.pem
components/https_dashboard/include/: https_dashboard.h
components/mqtt_comp/: CMakeLists.txt  mqtt_comp.c
components/mqtt_comp/include/: mqtt_comp.h
components/sntp/: CMakeLists.txt  sntp.c
components/sntp/include/: sntp.h
components/wifi/: CMakeLists.txt  wifi.c
components/wifi/include/: wifi.h
main/: CMakeLists.txt  idf_component.yml  main.c
main/certificates/: prvtkey.pem
main/data/: wifi_list.json
main/web_page/: index.html  package.json  pnpm-lock.yaml
main/web_page/src/: main.js  style.css
